# hiveforge

./: .gitignore  Dockerfile.base_elixir  Makefile  README.md  scratch
hiveforge_agent/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  agent_install.sh  mix.exs  start.sh  values-example.yaml
hiveforge_agent/Helm/hiveforge_agent/: Chart.yaml  values.yaml
hiveforge_agent/config/: runtime.exs
hiveforge_agent/lib/: hiveforge_agent.ex
hiveforge_agent/lib/hiveforge_agent/: application.ex  auth.ex  heartbeat.ex  identity.ex  queryjobs.ex  scheduler.ex
hiveforge_agent/misc/certificates/: ca-cert.pem
hiveforge_agent/test/: hiveforge_agent_test.exs
hiveforge_cli/: Readme.md  api.go  common.go  config.json  fastcdc.go  go.mod  go.sum  hash_command.go  hiveignore_readme.md  main.go  testjob.json  types.go
hiveforge_controller/: .dockerignore  .gitignore  Dockerfile  Dockerfile.migrations  Makefile  README.md  controller_install.sh  migrate.sh  mix.exs  server.csr  service_test.yaml  values-example.yaml
hiveforge_controller/Helm/: Readme.md
hiveforge_controller/Helm/hiveforge_controller/: Chart.yaml  values.yaml
hiveforge_controller/config/: releases.exs
hiveforge_controller/misc/: pgpool-test.yaml
hiveforge_database/: install_postgres.sh  install_postgrtes.sh  pgbouncer.crt
hiveforge_frontend/: .gitignore  README.md  mix.exs
hiveforge_frontend/lib/: hiveforge_frontend.ex
hiveforge_frontend/test/: hiveforge_frontend_test.exs
hiveforgectl/: Cargo.toml  config.json
hiveforgectl/src/: main.rs
(+89 files in other folders)
